...
            </LinearLayout>

        </LinearLayout>


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/description"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
...
                android:layout_height="wrap_content"
                android:text="Ingredients" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Reviews" />

        </com.google.android.material.tabs.TabLayout>

        <FrameLayout
            android:id="@+id/RecipeFrameLayout"
            android:layout_width="0dp"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="50dp"
            android:layout_height="51dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:background="@color/colorWindow"
            android:src="@drawable/vert_menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/ReturnButton"
            android:layout_width="59dp"
            android:layout_height="49dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:background="@null"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/serves"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <CheckBox
            android:id="@+id/addKudos"
            android:layout_width="55dp"
            android:layout_height="43dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/LetsCook"
...
